kubernetes/ingress/traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: browser-backend-api-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: browser-backend-api-service
          servicePort: 80
      - path: /webhook
        backend:
          serviceName: webhook-service
          servicePort: 80
